Cycles: Certain Emission Sampling settings will render differently between Light Tree On vs Off #115997
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#115997
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42
Blender Version
Broken versions:
3.6.5
4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash:
d0dd92834a08
Worked: Not Sure
Short description of error
Cycles has a feature for selecting the emissive mesh sampling method. The option is for picking whether the front, back, both, or neither, of the triangle should be included in direct light sampling.
When this setting is configured improperly (E.G. Selecting "Back" when only the Front of the triangle is facing the object you're lighting up), then the Light Tree and non-Light Tree sampling method will render differently. Specifically the non-Light Tree will render the light brighter than expected. Here are some images demonstrating that:
This is unexpected behaviour. And quick testing points to the front of the mesh being sampled by both direct light sampling and random sampling and being added together rather than "blended" and this is the reason for why the "Back + Light Tree Off" option renders brighter. But I could be wrong.
Exact steps for others to reproduce the error
Mesh Sampling Light Tree Test File.blend
In the .blend file attached, "Back" emission sampling and Light Tree Off renders brighter than expected. All other combinations are fine.
Note: The Light Tree option can be found at
Render Proerties -> Sampling -> Lights -> Light Tree
Note: The mesh emission sampling option can be found at
Material Properties -> The emissive material -> Settings -> Surface -> Emission Sampling
Cycles: Incorrect Emission Sampling settings will render differently between Light Tree On vs Offto Cycles: Certain Emission Sampling settings will render differently between Light Tree On vs Off@Alaska hi, can confirm when light tree is disabled.
Not sure. Because same "bright render" I observed when backface of the emissive surface was facing the plane (and emissive sampling was set to "Front").
For the scene I was testing, if the front of a triangle was facing a diffuse surface, and the emission sampling setting was set to back, then the issue would occur.
But if you then rotate the mesh such that the back of the triangle was facing the diffuse surface, and you change the emission sampling option to Front, the same issue will occur.
So basically, the issue only occurs if the
Emission Sampling
setting is set to the opposite of the direction the mesh light is facing relative to the object being lit up.Right 😅